--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin-right: auto;
     background-color: green;
     min-height: 500px;
+    overflow: hidden;
 }
 #header{
     width: 100%;
@@ -31,4 +32,12 @@
 }
 .clear{
     clear: both;
+}
+.oszlop4{
+    float: left;
+    margin: 5px;
+    width: calc(25% - 10px);
+}
+.oszlop4 img{
+    width: 100%;
 }
