--- a/style.css
+++ b/style.css
@@ -41,3 +41,24 @@
 .oszlop4 img{
     width: 100%;
 }
+.oszlop2 p{
+    margin: 10px;
+    background-color: honeydew;
+    text-align: justify;
+    padding: 10px;
+}
+.oszlop4 p{
+    margin: 5px;
+    background-color: honeydew;
+    text-align: justify;
+    padding: 5px;
+}
+#footer{
+    width: 100%;
+    text-align: center;
+    border-top: 1px solid white;
+}
+#footer p {
+    color: white;
+    font-style: italic;
+}
